Use last-of-type instead of last-child to be slightly more precise. Avoids problem with other types of markup being inserted afterwards, e.g. an <iframe> like the one recaptcha inserts, see http://stackoverflow.com/questions/8155645/recaptcha-creates-iframe-on-page-breaks-styling [#37]

--- a/src/featherlight.css
+++ b/src/featherlight.css
@@ -24,7 +24,7 @@
 	}
 
 	/* support for nested featherlights. Does not work in IE8 (use JS to fix) */
-	.featherlight:last-child {
+	.featherlight:last-of-type {
 		background: rgba(0, 0, 0, 0.8);
 	}
 
